# stuos

./: .gdbinit  .gitignore  Containerfile  README.MD  build_all.sh  install_script_debian.sh  make_empty_fs.sh  mount_fs.sh  reset.sh  run.sh
abi/uapi/: dirent.h  errno.h  fcntl.h  float.h  signal.h  stat.h  stdarg.h  stdbool.h  stddef.h  stdint.h  syscalls.h  termios.h  types.h  unistd.h  wait.h
custom_libc/: .clangd  .gitignore  Makefile  README.MD  assert.c  bcf.sh  crt0.asm  ctype.c  dirent.c  errno.c  fcntl.c  init.c  libc.c  libgcc_things.c  printf.c  qsort.c  setjmp.asm  signal.c  stat.c  stdio.c  stdlib.c  string.c  strings.c  strto.c  strtol.c  syscalls.asm  termios.c  unistd.c  wait.c  wchar.c  wctype.c
custom_libc/crt/: crt0.asm
custom_libc/fuzzing/: .gitignore  Makefile  bugs_found.txt  file_test.c  file_test.h  fork_test.c  fork_test.h  fuzz.c  get_id_test.c  get_id_test.h  mbrtowc_test.c  mbrtowc_test.h  mbsrtowcs_test.c  mbsrtowcs_test.h  other.c  pipe_test.c  pipe_test.h  setjmp_test.c  setjmp_test.h  stdlib_test.c  stdlib_test.h  string_test.c  string_test.h  strtod_test.c  strtod_test.h  tools.h
custom_libc/include/: .clangd  assert.h  ctype.h  dirent.h  errno.h  fcntl.h  float.h  getopt.h  inttypes.h  limits.h  math.h  nonstandard.h  setjmp.h  signal.h  stdbool.h  stddef.h  stdint.h  (+10 more)
malloc_my_os_3/: Cargo.toml  Makefile  build.rs  build.sh  library.c  linked_list_item.c  linked_list_item.h  required.h  rust_bindings.h
malloc_my_os_3/src/: debugging.rs  lib.rs  linked_list_item.rs
my_os_3/: .gdbinit  .gitignore  Makefile  README  start_gdb.sh
(+74 files in other folders)
